test/typeCheckTest/fail/test24.ic
class BadPlus {
	void main (string [] args) {
		int x = true + "hey";
	}
}